@startuml

title __SRC's Class Diagram__\n

  namespace  {
    class ElectricMotor {
        + ElectricMotor()
    }
  }
  

  namespace  {
    class HydraulicMotor {
        + HydraulicMotor()
    }
  }
  

  namespace  {
    class Main {
        {static} + main()
    }
  }
  

  namespace  {
    class Motor {
        ~ model : String
        ~ power : long
        + Motor()
    }
  }
  

  namespace  {
    class MotorStaticFactory {
        {static} + make()
    }
  }
  

  namespace  {
    class PneumaticMotor {
        + PneumaticMotor()
    }
  }
  

  namespace  {
    class WarpDrive {
        + WarpDrive()
    }
  }
  

  ElectricMotor -up-|> Motor
  HydraulicMotor -up-|> Motor
  PneumaticMotor -up-|> Motor
  WarpDrive -up-|> Motor


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
